# projeto_gestao_de_eventos

./: CMakeLists.txt  MANUAL.md  README.md  TODO.md  components.c  components.h  evento.c  evento.h  login.c  login.h  main.c  manual.md  menu.c  menu.h  produto.c  produto.h  usuario.c  usuario.h  variaveis_compartilhadas.c  variaveis_compartilhadas.h  venda.c  venda.h  venda_detalhes.c  venda_detalhes.h
components/: components.c  components.h
evento/: evento.c  evento.h
